--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header{
     height: 36vw;
     margin: 30px auto;
-    background: url('./header_img.png') no-repeat;
+    background: url('../../assets/header_img.png') no-repeat;
     background-size: contain;
     object-fit: contain;
     position: relative;
